syntax = "proto3";

package tip;

option go_package = "app/protobuf";

message Tip {
    string id = 1;
    string title = 2;
    string url = 3;
    string description = 4;
    string image = 5;
}

message CreateTipRequest {
    Tip tip = 1;
}

message CreateTipResponse {
    Tip tip = 1;
}

message DeleteTipRequest {
    string tip_id = 1;
}

message DeleteTipResponse {
    string tip_id = 1;
}

message AllTipsRequest {
    // empty message: list all Tips
}

message AllTipsResponse {
    Tip tip = 1;
}

message SearchTipsRequest {
    string tip_title = 1;
}

message SearchTipsResponse {
    Tip tip = 1;
}

service TipService {
    rpc CreateTip (CreateTipRequest) returns (CreateTipResponse);
    rpc DeleteTip (DeleteTipRequest) returns (DeleteTipResponse);
    rpc AllTips (AllTipsRequest) returns (stream AllTipsResponse);
    rpc SearchTips (SearchTipsRequest) returns (stream SearchTipsResponse);
}